# HW_02_01_mod2_DL

./: create_db.py  pyproject.toml  seed.py  tasks.db  tasks.sql  tasks_query.sql
For_PostgreSQL/: create_db.py  pyproject.toml  seed.py  tasks.sql  tasks_query.sql
